--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@vesp/nuxt-fontawesome": "^1.2.1",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@nuxtjs/tailwindcss": "^6.13.1",
     "sass": "^1.85.0",
     "tailwindcss": "^3.4.17"
