--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@duskmoon/vue3-typed-js": "^0.0.4",
     "@vesp/nuxt-fontawesome": "^1.2.1",
     "nuxt": "^3.15.4",
     "vue": "latest",
