--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@duskmoon/vue3-typed-js": "^0.0.4",
+    "@nuxtjs/robots": "^5.2.4",
+    "@nuxtjs/sitemap": "^7.2.6",
     "@vesp/nuxt-fontawesome": "^1.2.1",
     "nuxt": "^3.15.4",
     "vue": "latest",
