--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@vesp/nuxt-fontawesome": "^1.2.1",
     "nuxt": "^3.15.4",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue3-carousel-nuxt": "^1.1.5"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
