--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/sitemap": "^7.2.6",
     "@vesp/nuxt-fontawesome": "^1.2.1",
     "nuxt": "^3.15.4",
+    "nuxt-aos": "^1.2.5",
     "vue": "latest",
     "vue-router": "latest",
     "vue3-carousel-nuxt": "^1.1.5"
