wip google map component

--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,6 @@ BASE_PATH=tobemodified
 CALENDLY_PATH=tobemodified
 
 GITHUB_PATH=tobemodified
+GITHUB_TOKEN=tobemodified
+
+GOOGLE_MAPS_API_KEY=tobemodified
