--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vesp/nuxt-fontawesome": "^1.2.1",
     "nuxt": "^3.15.4",
     "nuxt-aos": "^1.2.5",
+    "nuxt-disqus": "^1.1.1",
     "nuxt-gtag": "^3.0.2",
     "vue": "latest",
     "vue-router": "latest",
